// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches snapshot for multiple select 1`] = `
<div
  class="multiple-mode multiselect"
>
  <label
    for="multiselect"
  >
    Select
  </label>
  <div
    class="multiselect-input"
  >
    <span
      class="selected-options"
    >
      FR, DE, BE, FE, RE
    </span>
    <span
      class="actions"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 6L18 18M18 6L6 18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="Complete"
        >
          <g
            id="F-Chevron"
          >
            <polyline
              fill="none"
              id="down"
              points="5 8.5 12 15.5 19 8.5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
  <ul
    role="list"
  >
    <!--v-if-->
    <li
      class="multiselect-option"
    >
      <div
        class="checkbox-wrapper"
      >
        <input
          id="checkbox"
          name="checkbox"
          type="checkbox"
        />
        <!--v-if-->
      </div>
       Select all 
    </li>
    
    <li
      class="multiselect-option"
    >
      <div
        class="checkbox-wrapper"
      >
        <input
          id="checkbox"
          name="checkbox"
          type="checkbox"
        />
        <!--v-if-->
      </div>
      
      BE
      
    </li>
    <li
      class="multiselect-option"
    >
      <div
        class="checkbox-wrapper"
      >
        <input
          id="checkbox"
          name="checkbox"
          type="checkbox"
        />
        <!--v-if-->
      </div>
      
      DE
      
    </li>
    <li
      class="multiselect-option"
    >
      <div
        class="checkbox-wrapper"
      >
        <input
          id="checkbox"
          name="checkbox"
          type="checkbox"
        />
        <!--v-if-->
      </div>
      
      FE
      
    </li>
    <li
      class="multiselect-option"
    >
      <div
        class="checkbox-wrapper"
      >
        <input
          id="checkbox"
          name="checkbox"
          type="checkbox"
        />
        <!--v-if-->
      </div>
      
      FR
      
    </li>
    <li
      class="multiselect-option"
    >
      <div
        class="checkbox-wrapper"
      >
        <input
          id="checkbox"
          name="checkbox"
          type="checkbox"
        />
        <!--v-if-->
      </div>
      
      RE
      
    </li>
    
  </ul>
</div>
`;

exports[`MultiSelect > matches snapshot for single select 1`] = `
<div
  class="multiselect"
>
  <label
    for="multiselect"
  >
    Select
  </label>
  <div
    class="multiselect-input"
  >
    <span
      class="selected-options"
    >
      FR
    </span>
    <span
      class="actions"
    >
      <svg
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M6 6L18 18M18 6L6 18"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <svg
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          id="Complete"
        >
          <g
            id="F-Chevron"
          >
            <polyline
              fill="none"
              id="down"
              points="5 8.5 12 15.5 19 8.5"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            />
          </g>
        </g>
      </svg>
    </span>
  </div>
  <ul
    role="list"
  >
    <!--v-if-->
    <!--v-if-->
    
    <li
      class="multiselect-option"
    >
      <!--v-if-->
      
      BE
      
    </li>
    <li
      class="multiselect-option"
    >
      <!--v-if-->
      
      DE
      
    </li>
    <li
      class="multiselect-option"
    >
      <!--v-if-->
      
      FE
      
    </li>
    <li
      class="multiselect-option selected"
    >
      <!--v-if-->
      
      FR
      
    </li>
    <li
      class="multiselect-option"
    >
      <!--v-if-->
      
      RE
      
    </li>
    
  </ul>
</div>
`;
